<resources>
    <string name="app_name">SQLite Database</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="contact_no">Contact No.</string>

    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="enter_your_pin_code">Enter your Pin Code</string>
    <string name="enter_your_contact">Enter your Contact No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>


</resources>